fix alignement collapse

--- a/src/styles/3-pages/logement.scss
+++ b/src/styles/3-pages/logement.scss
@@ -92,6 +92,7 @@ ul {
 .container-wrapper {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
 }
 .wrapper {
     width: 48%;
